// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SuperVideo deleted or expired file 1`] = `[]`;

exports[`SuperVideo embed only 1`] = `
[
  {
    "format": "hls",
    "label": "SuperVideo",
    "meta": {
      "countryCodes": [
        "it",
      ],
      "height": undefined,
      "title": "",
    },
    "sourceId": "supervideo_it",
    "ttl": 900000,
    "url": "https://hfs308.serversicuro.cc/hls/,dnzpe7rf5xg4a3gyva3h5orlyw23xosfzwunl5xbmjpz2hqr27aodtfrseia,.urlset/master.m3u8",
  },
]
`;

exports[`SuperVideo processing video 1`] = `[]`;

exports[`SuperVideo supervideo.cc /e/ 1`] = `
[
  {
    "format": "hls",
    "label": "SuperVideo",
    "meta": {
      "bytes": 1073741824,
      "countryCodes": [
        "de",
      ],
      "height": 720,
      "title": "des-teufels-bad-2024",
    },
    "sourceId": "supervideo_de",
    "ttl": 900000,
    "url": "https://hfs309.serversicuro.cc/hls/,dnzpfi3d27g4a3gyvbmh5klwtl65qh654hyjtgupd6p577fze64cp3rsmdyq,.urlset/master.m3u8",
  },
]
`;

exports[`SuperVideo supervideo.tv /embed-/ 1`] = `
[
  {
    "format": "hls",
    "label": "SuperVideo",
    "meta": {
      "bytes": 219571814,
      "countryCodes": [
        "it",
      ],
      "height": 344,
      "title": "Babylon 5 2x3",
    },
    "sourceId": "supervideo_it",
    "ttl": 900000,
    "url": "https://hfs307.serversicuro.cc/hls/,dnzpaalv5xg4a3gyvavh52jryoft7o5cd5nm7cwtnu74kmc4ohiklh5qwq4q,.urlset/master.m3u8",
  },
]
`;
